--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,6 +6,24 @@
     android:layout_height="match_parent"
     tools:context="com.efpro.bengkelmotor_01.Activity.SignInActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+        <View
+            android:id="@+id/scrim"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/scrim"
+            android:visibility="invisible"/>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +48,8 @@
             android:paddingBottom="15dp"
             />
     </LinearLayout>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
