--- a/app/src/main/res/layout/fragment_bengkel.xml
+++ b/app/src/main/res/layout/fragment_bengkel.xml
@@ -17,6 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@drawable/gb2"/>
+        android:src="@drawable/ic_map_24dp"/>
 
 </FrameLayout>
