--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/fab_map"
         android:layout_alignStart="@+id/fab_map"
-        android:src="@mipmap/ic_my_location" />
+        android:src="@drawable/ic_my_location_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_map"
@@ -35,7 +35,7 @@
         android:layout_alignParentBottom="true"
         android:layout_above="@+id/cdvBengkelBottom"
         android:layout_margin="16dp"
-        android:src="@drawable/gb1"/>
+        android:src="@drawable/ic_view_list_24dp"/>
 
 
     <android.support.v7.widget.CardView
@@ -45,8 +45,7 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
-    android:background="@android:color/white"
-    >
+    android:background="@android:color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -60,10 +59,24 @@
                 android:layout_centerVertical="true"/>
 
             <TextView
+                android:id="@+id/txtTopCdv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="Bengkel Terdekat" />
+
+            <TextView
                 android:id="@+id/txtTNama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"/>
+                android:layout_below="@+id/txtTopCdv"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"/>
 
             <TextView
                 android:id="@+id/txtTAlamat"
@@ -142,7 +155,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_black_24dp"
+                android:src="@drawable/ic_star_24dp"
                 android:layout_marginBottom="8dp"
                 android:layout_toEndOf="@+id/txtBRating"
                 android:layout_alignBottom="@+id/imgBengkel"/>
