Fixed FB Login, Tips/About, read database offline

--- a/app/src/main/res/layout/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout/activity_detail_bengkel.xml
@@ -168,6 +168,7 @@
                             android:layout_height="match_parent">
 
                             <ImageButton
+                                android:id="@+id/btnCall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="19dp"
                                 android:layout_margin="7dp"
@@ -278,11 +279,11 @@
                 app:cardCornerRadius="2dp"
                 app:cardElevation="2dp">
 
-                <com.efpro.bengkelmotor_01.ExpandableHeightListView
+                <com.efpro.bengkelmotor_01.Helper.ExpandableHeightListView
                     android:id="@+id/reviewListView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                </com.efpro.bengkelmotor_01.ExpandableHeightListView>
+                </com.efpro.bengkelmotor_01.Helper.ExpandableHeightListView>
 
             </android.support.v7.widget.CardView>
 
