--- a/app/src/main/res/layout/bengkel_list.xml
+++ b/app/src/main/res/layout/bengkel_list.xml
@@ -20,7 +20,8 @@
         <ImageView
             android:id="@+id/imgList"
             android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:src="@drawable/ic_cari_bengkel"/>
 
         <TextView
             android:id="@+id/txtNama"
