--- a/app/src/main/res/layout/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout/activity_detail_bengkel.xml
@@ -37,7 +37,7 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="290dp"/>
+                android:layout_height="290dp" />
 
             <LinearLayout
                 android:id="@+id/SliderDots"
@@ -54,6 +54,7 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme"/>
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -202,7 +203,7 @@
                     android:layout_height="wrap_content"
                     style="?android:attr/actionOverflowButtonStyle"
                     android:layout_gravity="right"
-                    android:visibility="visible"
+                    android:visibility="invisible"
                     android:onClick="showPopup"/>
 
                 <LinearLayout
